--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
              <strong>Guillem Brasó</strong>, Nikita Kister, Laura Leal-Taixé 
               <br>
               <strong>ICCV 2021 </strong>
-              <p> We propose an multi-head attention-based framework for end-to-end bottom-up multi-person pose estimation. Our main idea is to detect both keypoints and object centers, and use cross-attention among them to group keypoints into human poses.</p>
+              <p> We propose a multi-head attention-based framework for end-to-end bottom-up multi-person pose estimation. Our main idea is to detect both keypoints and object centers, and use cross-attention among them to group keypoints into human poses.</p>
 
                                                   
               <a href="https://arxiv.org/abs/2110.05132">paper</a> |                                     
