--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                                                   
               <a href="https://arxiv.org/abs/2210.05657">paper</a> |                                     
-              <a href="https://peter-kocsis.github.io/LowDataGeneralization/">website</a> |
+              <a href="https://peter-kocsis.github.io/LowDataGeneralization/">website</a> 
             </td>
           </tr>
 
